--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"prettier": "^3.1.0",
 		"prettier-plugin-astro": "^0.12.2"
 	},
+	"optionalDependencies": {
+    	"@rollup/rollup-linux-x64-gnu": "4.6.1"
+	},
 	"dependencies": {
 		"@tinacms/cli": "^1.5.43",
 		"tinacms": "^1.6.1"
